# GlioTrace2.0

./: .gitignore  README.md  pyproject.toml
Example/: class_run_example.ipynb  process_image_example.py
src/: README.md
src/GliotraceProject/: run_glio_class.ipynb  test_size.ipynb
src/GliotraceProject/gliotrace/: gliotrace_class.py
src/GliotraceProject/gliotrace/build_tracks_and_vascularity/: build_tracks_and_vascularity.py
src/GliotraceProject/gliotrace/feature_and_hmm_pipline/: feature_construction.py  format_data.py  get_hyperparamters.py  hmm_glm.py  hmm_pipeline.py  hmm_shrunken.py  viterbi_paths.py
src/GliotraceProject/gliotrace/initalize_class/: defaults.py  load_data.py  types.py  validation.py
src/GliotraceProject/gliotrace/stabilize/: convert.py  (+1 more)
src/gliotrace/: gliotrace_class.py
src/gliotrace/build_tracks_and_vascularity/: build_tracks_and_vascularity.py
src/gliotrace/feature_and_hmm_pipline/: clean_tracks.py  feature_construction.py  hmm_glm.py  hmm_pipeline.py  viterbi_paths.py
src/gliotrace/initalize_class/: defaults.py  load_data.py  validation.py
src/gliotrace/stabilize/: process_image.py
src/gliotrace/visualize/: generate_video.py  generate_video_compare.py  preprocess_stack.py  vis_tracking.py  vis_tracking_compare.py
src/src/GliotraceProject/: exp148_green_live_plus_red_maxproj_p90.avi  exp148_original_restricted_by_globalmax.avi  exp148_p90_overlay.avi  exp148_roi5_subtract_tile_p50.avi  exp148_roi5subtract_global_p50.avi  fake_stack.ipynb  optical_flow.ipynb  run_glio_class.ipynb  run_stabilize.py  tracking_test.ipynb
(+41 files in other folders)
