[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
gliotrace = [
  "build_tracks_and_vascularity/weights_and_models/weights/*.pth",
  "build_tracks_and_vascularity/weights_and_models/weights/*.pth",
  "build_tracks_and_vascularity/classify_and_track/*.mat"
]

[project]
name = "GlioTrace"
version = "0.0.1"
requires-python = ">=3.11,<3.14"
dependencies = [
  "imageio>=2.37.2,<3",
  "matplotlib>=3.10.8,<4",
  "numpy>=2.0,<3",
  "opencv-python>=4.12.0.88,<5",
  "pandas>=2.3.3,<3",
  "scikit-learn>=1.8.0,<2",
  "scipy>=1.16.3,<2",
  "scikit-image>=0.25.0,<1",
  "tifffile>=2025.10.16",
  "torch>=2.3.1,<3",
  "tqdm>=4.67.1,<5",
  "imageio-ffmpeg",
  "joblib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

